@@ -1,3 +1,30 @@
+#   Programmer: limodou
+#   E-mail:     limodou@gmail.com
+#
+#   Copyleft 2006 limodou
+#
+#   Distributed under the terms of the GPL (GNU Public License)
+#
+#   NewEdit is free software; you can redistribute it and/or modify
+#   it under the terms of the GNU General Public License as published by
+#   the Free Software Foundation; either version 2 of the License, or
+#   (at your option) any later version.
+#
+#   This program is distributed in the hope that it will be useful,
+#   but WITHOUT ANY WARRANTY; without even the implied warranty of
+#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#   GNU General Public License for more details.
+#
+#   You should have received a copy of the GNU General Public License
+#   along with this program; if not, write to the Free Software
+#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+#
+#   $Id$
+#   Update:
+#   2008/08/27
+#       * CheckList Add DeleteAllItems method
+#       * CheckListMixin Add selectAll(flag) method
+
 import wx
 from wx import ImageFromStream, BitmapFromImage
 import cStringIO, zlib
@@ -169,7 +196,11 @@ class CheckListMixin:
     def notFlag(self, index):
         f = self.getFlag(index)
         self.setFlag(index, f ^ 1)
-
+        
+    def selectAll(self, f):
+        for i in range(self.GetItemCount()):
+            self.setFlag(i, f)
+            
 class CheckList(CheckListMixin, List):
     def __init__(self, parent, columns, check_image=None, uncheck_image=None, style=wx.LC_REPORT):
         List.__init__(self, parent, columns, style=style)
@@ -181,6 +212,10 @@ class CheckList(CheckListMixin, List):
     def GetValue(self):
         for i in CheckListMixin.GetValue(self):
             yield i
+            
+    def DeleteAllItems(self):
+        super(CheckList, self).DeleteAllItems()
+        self.values = {}
 
 if __name__ == '__main__':
     class wxApp(wx.App):
